# CorpusCompass

./: .gitignore  Configs.py  README.md  annotation_fixing.py  build.sh  colors.py  compile_ui.sh  corpus_analysis.ipynb  data_analysis.py  dataset_creation.ipynb  dependent_variables.json  independent_variables.json  main.ipynb  main.py  pyproject.toml  requirements.txt  run_tests.bat  setup.py  utils.py
analysis/: colors.py  data_analysis.py
annotation_fixer/: App.py  AskLoaded.py  GeneralWindow.py  LoadFilesPopup.py  Memory.py  README.md  annotation_fixing.py  gui.py  main.py  utils.py
annotation_fixer/common/: AppLogger.py  GeneralWindow.py  GenerateDatasetThread.py  Memory.py  __init__.py  utils.py
annotation_fixer/windows/: AnnotationFixer.py  App.py  AskLoaded.py  DatasetCreator.py  LoadFiles.py  LoadFilesPopup.py  Settings.py  __init__.py
corpuscompass/: controller.py  corpus_compass_app.py  main.py
corpuscompass/annotation_fixer/: af_utils.py
corpuscompass/common/: Memory.py  __init__.py  c_utils.py
corpuscompass/data_analyzer/: DAProcess.py  DataAnalyzer.py  __init__.py  da_analysis_functions.py  da_main.py  da_utils.py
corpuscompass/dataset_creator/: DCThread.py  DatasetCreator.py
corpuscompass/model/: __init__.py  corpus_compass_model.py  dataset_creation.py  dataset_creator.py  files.py  variables_speaker_detection.py  variables_speakers.py
corpuscompass/other_windows/: Main.py  Settings.py  __init__.py
corpuscompass/utils/: DCThread.py  dc_utils.py  exception_handling.py  (+1 more)
dataset_analyzer/: main.py
dataset_creator/: dataset_creation.ipynb  utils.py
includes/: changing_variables.webm  corpus_example.txt  icon.icns
src/: controller.py  corpus_compass_app.py  main.py
tests/: test_creating_output_files.py  test_files.py  test_getting_project_data.py  test_project.py  test_saving_loading_project.py  test_speed_variable_detection.py  test_updating_project_data.py  test_variabes_speakers.py  test_variables_speaker_detection.py
(+126 files in other folders)
