[tool.poetry]
name = "corpuscompass"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.9"
pandas = "^2.2.3"
pyside6 = "^6.8.2.1"
tqdm = "^4.67.1"
nltk = "^3.9.1"
pyinstaller = "^6.12.0"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
